# vision

./: CMakeLists.txt  README.md  package.xml
include/vision/: cfg.yaml  config.h  vision_main.h  yaml_parses.h
src/: test.yaml  vision_capture.cpp  vision_main.cpp  vision_main_backup.cpp  vision_obstacle.cpp
srv/: HsvThresholdInit.srv
vid/: percobaan.mkv
